Travis: use JakubOnderka/PHP-Parallel-Lint for linting of sources

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"ext-json": "*"
 	},
 	"require-dev": {
-		"nette/tester": "@dev"
+		"nette/tester": "@dev",
+		"jakub-onderka/php-parallel-lint": "~0.6"
 	},
 	"support": {
 		"email": "filip@prochazka.su",
