--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		}
 	],
 	"require": {
-		"nette/nette": "~2.1@dev",
+		"nette/nette": "2.1.*@dev",
 
 		"kdyby/curl-ca-bundle": "~1.0",
 		"ext-curl": "*",
