--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,34 @@
 		}
 	],
 	"require": {
-		"nette/nette": "~2.1@dev",
+		"nette/application": "~2.2@dev",
+		"nette/di": "~2.2@dev",
+		"nette/http": "~2.2@dev",
 
 		"kdyby/curl-ca-bundle": "~1.0",
 		"ext-curl": "*",
 		"ext-json": "*"
 	},
 	"require-dev": {
+		"nette/nette": "~2.2@dev",
+		"nette/bootstrap": "~2.2@dev",
+		"nette/caching": "~2.2@dev",
+		"nette/component-model": "~2.2@dev",
+		"nette/database": "~2.2@dev",
+		"nette/finder": "~2.2@dev",
+		"nette/forms": "~2.2@dev",
+		"nette/mail": "~2.2@dev",
+		"nette/neon": "~2.2@dev",
+		"nette/php-generator": "~2.2@dev",
+		"nette/reflection": "~2.2@dev",
+		"nette/robot-loader": "~2.2@dev",
+		"nette/safe-stream": "~2.2@dev",
+		"nette/security": "~2.2@dev",
+		"nette/tokenizer": "~2.2@dev",
+		"nette/utils": "~2.2@dev",
+		"latte/latte": "~2.2@dev",
+		"tracy/tracy": "~2.2@dev",
+
 		"nette/tester": "@dev",
 		"jakub-onderka/php-parallel-lint": "~0.7"
 	},
@@ -37,7 +58,7 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "0.1-dev"
+			"dev-master": "1.0-dev"
 		}
 	}
 }
