--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,9 @@
 			"src/Kdyby/Github/exceptions.php"
 		]
 	},
+	"autoload-dev": {
+		"classmap": ["tests/KdybyTests/"]
+	},
 	"extra": {
 		"branch-alias": {
 			"dev-master": "0.2-dev"
